--- a/bin/main/static/css/m_rank.css
+++ b/bin/main/static/css/m_rank.css
@@ -21,19 +21,20 @@
 	color: white;
 }
 
+/* body {
+	background: url(/images/pop.jpg);
+	background-color: #11ffee00;;
+	color: black !important;
+	font-weight: bold;
+} */
+
 body {
 	background: url(/images/seat.jpg);
 	background-color: #11ffee00;
 	font-weight: bold;
 	color: white;
 }
-/* 
-body {
-	background: url(/images/pop.jpg);
-	background-color: #11ffee00;;
-	color: black !important;
-	font-weight: bold;
-} */
+
 .ui-datepicker {
 	margin-left: 100px;
 	z-index: 1000;
@@ -49,10 +50,6 @@ li span {
 		0.5px 0 rgb(153, 153, 153), 0 -0.5px rgb(153, 153, 153);
 }
 
-/* .h5 {
-	color: balck import!;
-}
- */
 #title {
 	text-shadow: -1px 0 rgb(153, 153, 153), 0 1px rgb(153, 153, 153), 1px 0
 		rgb(153, 153, 153), 0 -1px rgb(153, 153, 153);
