--- a/src/main/resources/templates/kobis/rank_list.html
+++ b/src/main/resources/templates/kobis/rank_list.html
@@ -4,10 +4,7 @@
 <meta charset="UTF-8">
 <title>Kobis</title>
 <style>
-.ui-datepicker {
-    margin-left: 100px;
-    z-index: 1000;
-}
+
 </style>
 
 <script
@@ -26,8 +23,9 @@
 	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 	crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/rank.css">
-
+<!-- <link rel="stylesheet" href="/css/rank.css"> -->
+<link href="/css/m_rank.css" rel="stylesheet" type="text/css" media="screen and (max-width:899px)">
+<link href="/css/rank.css" rel="stylesheet" type="text/css" media="screen and (min-width:900px)">
 <script>
 
             $(document).ready(() => {
@@ -81,14 +79,14 @@
 
                             for (var i = 0; i < response.length; i++) {
                                 let temp_html =  " <ul class=\"list-unstyled\">";
-                                temp_html += "<li class=\"h4\"><b>" + response[i].rank + "위</b></li>";
+                                temp_html += "<li class=\"h4\"><b><span>" + response[i].rank + "위</span></b></li>";
                                 //temp_html += "<li class=\"h5\"><b><a href="+ naverMv+ response[i].movieNm+"\" target='_blank'>"+  response[i].movieNm +"</a></b></li>";
-                                temp_html += "<li class=\"h5\"><b><a href="+ tmdbMv+ response[i].movieNm+"\" target='_blank'>"+  response[i].movieNm +"</a></b></li>";
+                                temp_html += "<li class=\"h5\" ><b><span ><a href="+ tmdbMv+ response[i].movieNm+"\" target='_blank' >"+  response[i].movieNm +"</span></a></b></li>";
                                /*  temp_html += "<li class=\"h5\"><b>"+ response[i].movieNm+"</b></li>"; */
-                                temp_html += "<li>개봉일: " + response[i].openDt + "</li>";
-                                temp_html += " <li>누적관객수: " + response[i].audiAcc + "명</li>";
-                                temp_html += "<li><a href="+ megaMv + response[i].movieNm+"\" target='_blank'><img src=\"/images/m.png\" style=\" height:60px;\"  alt=\"메가박스\" title=\"메가박스에서 예매\"></img></a>"; 
-                                temp_html += "<a href="+ cgvMv + response[i].movieNm+"\" target='_blank'><img src=\"/images/cgv.svg\" style=\"height:30px;\"  alt=\"cgv\" title=\"cgv에서 예매\"></img></a></li>";
+                                temp_html += "<li><span style=\"rgb(89, 89, 89)\">개봉일: " + response[i].openDt + "</span></li>";
+                                temp_html += " <li><span>누적관객수: " + response[i].audiAcc + "명</span></li>";
+                                temp_html += "<li><span><a href="+ megaMv + response[i].movieNm+"\" target='_blank'><img src=\"/images/mega.png\" style=\" height:20px;\"  alt=\"메가박스\" title=\"메가박스에서 예매\" id=\"mv\" class=\"me-2\"></img></a></span>"; 
+                                temp_html += "<span><a href="+ cgvMv + response[i].movieNm+"\" target='_blank'><img src=\"/images/cgv.svg\" style=\"height:20px;\"  alt=\"cgv\" title=\"cgv에서 예매\" id=\"mv\"></img></a></span></li>";
                                 temp_html += "</ul>";
                                 $("#kobisList").append(temp_html);
                             }
@@ -113,7 +111,7 @@
         </script>
 
 </head>
-<body>
+<body style="color:black;">
 
 	<header th:replace="Header :: header"></header>
 
