--- a/src/main/resources/templates/movie/reviewDetail.html
+++ b/src/main/resources/templates/movie/reviewDetail.html
@@ -6,10 +6,19 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <link rel="stylesheet" href="/css/movieRec.css">
 <link rel="stylesheet" href="/css/style.css">
 <script>
 	$(document).ready(()=>{
+		let sweetAlert = function (icon,title,text) {
+			Swal.fire({
+	            icon: icon,
+	            title: title,
+	            text: text
+	        });
+		};
+		
 		let isEmpty = function(value){ 
 		if( value == "" || value == null || value == undefined || ( value != null && typeof value == "object" && !Object.keys(value).length ) ){ 
 			return true 
@@ -141,7 +150,7 @@
 	function addRec() {
 		$("#add-recommend").on("click",()=>{
 			if(isEmpty(sessionUserid)) {
-				alert("로그인이 필요합니다");
+				sweetAlert('warning','','로그인이 필요합니다');
 			}
 			else
 			$.ajax({
@@ -165,7 +174,7 @@
 	function cancelRec() {
 		$("#cancel-recommend").on("click",()=>{
 			if(isEmpty(sessionUserid)) {
-				alert("로그인이 필요합니다");
+				sweetAlert('warning','','로그인이 필요합니다');
 			}
 			else
 			$.ajax({
