--- a/src/main/resources/templates/movie/search.html
+++ b/src/main/resources/templates/movie/search.html
@@ -6,11 +6,18 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/search.css">
-
 <script>
 $(document).ready(()=>{
+	let sweetAlert = function (icon,title,text) {
+		Swal.fire({
+            icon: icon,
+            title: title,
+            text: text
+        });
+	};
 	let isEmpty = function(value){ 
 		if( value == "" || value == null || value == undefined || ( value != null && typeof value == "object" && !Object.keys(value).length ) ){ 
 			return true 
@@ -27,12 +34,13 @@ $(document).ready(()=>{
 				type:"get",
 				url:"https://api.themoviedb.org/3/search/movie?api_key=a1c25fa7fbd7117d8d4d73bf1892deae&query="+search+"&language=ko",
 				success:(response)=>{
-					$("body").css('background','black');
 					let resultArray = response.results;
 					$("#search-list").empty();
-					if(resultArray.length==0){
-						$("#search-list").append("검색 결과가 없습니다");
+					if(isEmpty(resultArray)){
+						sweetAlert('error','','검색 결과가 없습니다');
+						$("body").css('background',"url('../images/movie_search.jpeg') center center no-repeat");
 					} else {
+						$("body").css('background','black');
 						let temp_html="";
 						for(let i=0;i<resultArray.length;i++){
 							let title = resultArray[i].title;
