--- a/bin/main/templates/movie/detail.html
+++ b/bin/main/templates/movie/detail.html
@@ -109,7 +109,7 @@ $(document).ready(()=>{
 			let temp_html = `<div id="movieDataBox" class="col-sm-7">
 				<h1 class="fw-bold mb-3">${title}<span class="text-secondary fs-3">(${originalTitle})</span></h1>
 				<h4 class="fw-bold text-muted">${tagline}</h4>
-				<div class="mb-3"><span>${overview}</span></div>
+				<div class="mb-3 overview clamp"><span>${overview}</span></div>
 				<div class="d-flex justify-content-between">
 	                <ul class="list-unstyled">	
 	                    <li class="text-secondary fw-bold"><span class="me-3">출연</span><span>${actors}</span></li>
