--- a/bin/main/templates/movie/search.html
+++ b/bin/main/templates/movie/search.html
@@ -38,7 +38,7 @@ $(document).ready(()=>{
 					$("#search-list").empty();
 					if(isEmpty(resultArray)){
 						sweetAlert('error','','검색 결과가 없습니다');
-						$("body").css('background',"url('../images/movie_search.jpeg') center center no-repeat");
+						$("body").css('background',"url('../images/movie_search.jpeg') 45% center no-repeat");
 					} else {
 						$("body").css('background','black');
 						let temp_html="";
