--- a/src/main/resources/static/css/movieRec.css
+++ b/src/main/resources/static/css/movieRec.css
@@ -151,11 +151,20 @@ star-input>.input.focus{
 	vertical-align:middle;
 }
 
-.clamp {
+/* review content clamp */
+.review-content.clamp {
 	width:inherit;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
+    overflow: hidden;
+}
+/* overview clamp */
+.overview.clamp {
+	width:auto;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 6;
     overflow: hidden;
 }
 
