--- a/src/main/resources/templates/Header.html
+++ b/src/main/resources/templates/Header.html
@@ -13,7 +13,7 @@
 			<div class="text-end h6 row ps-5 pe-3">
 				<!-- WatCat 폰트 -->
 				<div class="col-lg-4">
-					<p class="h1 ms-3 float-start" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: rgb(182, 0, 55);" >WaTCaT</p>
+					<a href="/" class="h1 ms-3 float-start text-decoration-none" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: rgb(182, 0, 55);" >WaTCaT</a>
 				</div>
 				<!-- 왼쪽정렬 메뉴 -->
 				<div class="col-lg-8 mt-2 text-white">
