--- a/src/main/resources/templates/movie/recommend.html
+++ b/src/main/resources/templates/movie/recommend.html
@@ -66,7 +66,7 @@
 								<a class="movieTitle text-decoration-none fw-bold fs-5" th:href="@{/review/detail(idx=${item.idx})}" th:text="${item.title}"></a>
 								<span class="badge bg-danger rounded-pill">추천</span>
 							</div>
-								<p th:text="${item.content}" class="clamp"></p>
+								<p th:text="${item.content}" class="review-content clamp"></p>
 						</td>
 						<td th:text="${item.userId}"></td>
 						<td th:text="${item.createdDt}"></td>
