--- a/src/main/resources/templates/MyPage/MypageWishlist.html
+++ b/src/main/resources/templates/MyPage/MypageWishlist.html
@@ -4,28 +4,50 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mypage</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+	crossorigin="anonymous">
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+	crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/css/style.css">
+<script>
+
+
+
+
+</script>
 </head>
 <body class="bg-black">
-    <div class="h-100">
-        <!-- 헤더 영역 -->
-        <header th:include="Header :: header" class="fixed-top px-0 mx-0">
-        </header>
-        
-        <div class="row h-100 bg2ndColor">
-            <!-- 네비게이션 영역 -->
-            <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5">
-            </nav>
-            <!-- 메인영역 -->
-            <main class="col-lg-9 bg-black text-white"  style="padding-top: 100px;">    
-                <div>
-                    찜리스트
-                </div>
-            </main>
-        </div>
-    
-    </div>
+	<div class="h-100">
+		<!-- 헤더 영역 -->
+		<header th:include="Header :: header" class="fixed-top px-0 mx-0">
+		</header>
+
+		<div class="row h-100 bg2ndColor">
+			<!-- 네비게이션 영역 -->
+			<nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5"></nav>
+			<!-- 메인영역 -->
+			<main class="col-lg-9 bg-black text-white"
+				style="padding-top: 100px;">
+				<div class="w-75 mx-auto mt-4">
+					<div>
+						<h3 class="text-white">
+							<b>찜</b>
+						</h3>
+						<div id="movieBox" class="row">
+							<div id="movieImgBox" class="col-sm-4 mx-auto">
+								<img src="/images/loading.gif" class="mt-5">
+							</div>
+						</div>
+					</div>
+				</div>
+			</main>
+		</div>
+
+	</div>
 </body>
 </html>
