--- a/src/main/resources/templates/MyPage/MypageWishlist.html
+++ b/src/main/resources/templates/MyPage/MypageWishlist.html
@@ -4,21 +4,31 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mypage</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-	crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <link rel="stylesheet" href="/css/style.css">
 <script>
+	$(document).ready(function() {
+		$.ajax({
+			type : "POST",
+			url : "/mypage/wishlistRequest",
+			success:function(response){
+				var html_resouce="";
+				$.each(response, function(index, item){
+					var movieId = item;
+					html_resouce += '<a href="/movie/detail?movieId='+item.movieId+'"><div class="border border-1 border-white rounded m-2 p-2 float-start" style="width : 200px"><div>'+item.movieId+'</div></div></a>';
+				});
 
+				$("#wishList").append(html_resouce);
 
+			},
+			error:function(){
+				alert("ajax 통신 오류")
+			}
+		});
 
-
+	});
 </script>
 </head>
 <body class="bg-black">
@@ -33,17 +43,8 @@
 			<!-- 메인영역 -->
 			<main class="col-lg-9 bg-black text-white"
 				style="padding-top: 100px;">
-				<div class="w-75 mx-auto mt-4">
-					<div>
-						<h3 class="text-white">
-							<b>찜</b>
-						</h3>
-						<div id="movieBox" class="row">
-							<div id="movieImgBox" class="col-sm-4 mx-auto">
-								<img src="/images/loading.gif" class="mt-5">
-							</div>
-						</div>
-					</div>
+				<div class="w-100 mx-auto mt-4">
+					<div id="wishList" name="wishList"></div>
 				</div>
 			</main>
 		</div>
