--- a/bin/main/templates/MyPage/MyPagePW.html
+++ b/bin/main/templates/MyPage/MyPagePW.html
@@ -31,9 +31,9 @@
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
         
-        <div class="row h-100 bg2ndColor">
+        <div class="row bg2ndColor h-100">
             <!-- 네비게이션 영역 -->
-            <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5">
+            <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 h-100">
             </nav>
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">
