--- a/src/main/resources/templates/MyPage/MypageReviewDetail.html
+++ b/src/main/resources/templates/MyPage/MypageReviewDetail.html
@@ -75,7 +75,7 @@
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
         
-        <div class="row h-100 bg2ndColor">
+        <div class="row bg2ndColor">
             <!-- 네비게이션 영역 -->
             <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5">
             </nav>
