--- a/bin/main/templates/MyPage/KobisRequestInput.html
+++ b/bin/main/templates/MyPage/KobisRequestInput.html
@@ -2,7 +2,6 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mypage</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -118,7 +117,7 @@
 </head>
 <body class="bg-black">
     <div class="h-100">
-        <!-- 헤더 영역 test주석 -->
+        <!-- 헤더 영역 주석 -->
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
         
@@ -145,7 +144,7 @@
                         <input type="button" id="btn-request" name="btn-request" value="데이터 요청하기" class="btn btn-danger form-control my-1" style="border-radius: 50px;">
                     </div>
                     <div class="form-floating my-1">
-                        <textarea class="form-control bg-black text-white" id = "AjaxResult" name="AjaxResult" style="height: 150px;"></textarea>
+                        <textarea class="form-control bg-black text-white" id = "AjaxResult" name="AjaxResult" style="height: 150px;" readonly></textarea>
                         <label>요청 결과</label>
                     </div>
                     <hr>
@@ -154,7 +153,7 @@
                         <input type="button" id="btn-request2" name="btn-request2" value="통계 요청" class="btn btn-danger form-control my-1" style="border-radius: 50px;">
                     </div>
                     <div class="form-floating my-1">
-                        <textarea class="form-control bg-black text-white" id = "collectionResult" name="collectionResult" style="height: 300px"></textarea>
+                        <textarea class="form-control bg-black text-white" id = "collectionResult" name="collectionResult" style="height: 300px" readonly></textarea>
                         <label>요청 결과</label>
                     </div>
                 </div>
