mypage > wishlist 제목 검색 기능 추가

--- a/bin/main/templates/MyPage/MyPagePW.html
+++ b/bin/main/templates/MyPage/MyPagePW.html
@@ -39,7 +39,7 @@
             <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">
                 <div>
                     <form action="/mypage/updatepw" method="post" class="w-50 mx-auto px-lg-5">
-                        <h3 class="my-5">비밀번호 변경 하기</h3>
+                        <h3 class="my-5 text-primary text-center"><b>비밀번호 변경 하기</b></h3>
                         
                         <div class="form-floating bg-black">
                             <input type="password" id="userPw" name="userPw" class="form-control bg-black text-white" autocomplete="off">
