--- a/bin/main/templates/MyPage/MyPageTrash.html
+++ b/bin/main/templates/MyPage/MyPageTrash.html
@@ -64,7 +64,7 @@
 			<main class="col-lg-9 bg-black " style="padding-top: 100px;">
 				<div class="w-75 mx-auto mt-4">
 					<div>
-						<h3 class="text-white">
+						<h3 class="text-primary">
 							<b>삭제한 리뷰</b>
 						</h3>
 					</div>
