--- a/bin/main/templates/MyPage/MypageReviewDetail.html
+++ b/bin/main/templates/MyPage/MypageReviewDetail.html
@@ -82,7 +82,7 @@
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white"  style="padding-top: 100px;">    
                 <div class="w-75 mx-auto mt-3">
-                    <h3 id="head">리뷰 상세 보기</h3>
+                    <h3 class="text-primary"><b>리뷰 상세 보기</b></h3>
                     <form action="#" id="frm" method="post" class="mt-3 p-3">
                         <input type="text" id="idx" name="idx" th:value="${reviewDetail.idx}" readonly><!-- idx 비활성화-->
                         <div class="row">
