--- a/src/main/resources/templates/MyPage/MypageReview.html
+++ b/src/main/resources/templates/MyPage/MypageReview.html
@@ -22,7 +22,7 @@
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">    
                 <div class="w-100 mx-auto mt-3">
-                    <h3>리뷰 리스트</h3>
+                    <h3 class="text-primary"><b>리뷰 리스트</b></h3>
                     <div class="w-100">
                         <div class="w-100">
                             <div th:each="list : ${reviewList.getList()}" class="border border-1 border-light rounded m-2 p-2 float-start" style="width: 260px;">
