--- a/src/main/resources/templates/MyPage/KobisRequestInput.html
+++ b/src/main/resources/templates/MyPage/KobisRequestInput.html
@@ -129,7 +129,7 @@
             <main class="col-lg-9 bg-black text-white"  style="padding-top: 100px;">    
                 <div class="m-3" style="width: 200px;">
                     
-                    <input type="button" id="AutoThread" name="AutoThread" value="AutoThread" class="btn btn-danger">
+                    <!-- <input type="button" id="AutoThread" name="AutoThread" value="AutoThread" class="btn btn-danger"> -->
                     <hr>
                     월단위 데이터 수집
                     <div class="form-floating my-1">
