--- a/bin/main/templates/account/admin/reviewManagement.html
+++ b/bin/main/templates/account/admin/reviewManagement.html
@@ -11,6 +11,7 @@
  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/style.css">
 <script>
+	
 
 	//리뷰 삭제 재게시
 	function deleteReview(idx,deletedYn){
@@ -73,7 +74,7 @@
         		<div class="m-3">
                    <h2 class="text-white my-3">리뷰 관리</h2>
                    <hr class="text-white">	        	
-						<div class="table-responsive">
+						<div th:if="${reviewList.getList().size()>0}" class="table-responsive">
 							<table class="table text-white">
 								<colgroup>
 									<col width="10%" />
@@ -83,6 +84,7 @@
 									<col width="5%"/>
 									<col width="10%"/>
 								</colgroup>
+								
 								<thead class="text-center">
 									<tr>
 										<th>번호</th>
@@ -93,7 +95,8 @@
 										<th></th>
 									</tr>
 								</thead>
-								<tbody class="text-center">
+								
+								<tbody class="text-center" id="item-content">
 									<tr th:each="item : ${reviewList.getList()}">
 										<td th:text="${item.idx}"></td>
 										<td class="text-start">
@@ -105,31 +108,53 @@
 										<td th:if="${item.deletedYn}=='Y'" class="text-danger">제거됨</td>
 										<td th:if="${item.deletedYn}=='N'">게시됨</td>
 										<td class="text-start">
-											    <button class="my-1 btn btn-sm btn-primary" th:if="${item.deletedYn}=='N'"  type="button" th:onclick="|javascript:deleteReview(${item.idx},'no')|">리뷰 삭제</button>
-											    <button class="my-1 btn btn-sm btn-secondary" th:if="${item.deletedYn}=='Y'" type="button" th:onclick="|javascript:deleteReview(${item.idx},'yes')|">리뷰재게시</button>
+											    <button class="mb-1 btn btn-sm btn-primary" th:if="${item.deletedYn}=='N'"  type="button" th:onclick="|javascript:deleteReview(${item.idx},'no')|">리뷰 삭제</button>
+											    <button class="mb-1 btn btn-sm btn-secondary" th:if="${item.deletedYn}=='Y'" type="button" th:onclick="|javascript:deleteReview(${item.idx},'yes')|">리뷰재게시</button>
 											    <button class="my-1 btn btn-sm btn-danger" th:onclick="|javascript:PDeleteReview(${item.idx})|">리뷰영구제거</button>
-											    <button class="my-1 btn btn-sm btn-warning"th:onclick='banUser([[${item.userId}]])'>계정 정지</button>	
+											    <button class="mt-1 btn btn-sm btn-warning"th:onclick='banUser([[${item.userId}]])'>계정 정지</button>	
 										</td>
 									</tr>
 								</tbody>
 							</table>
-							
-				 			<ul class="pagination d-flex justify-content-center">
-								<li class="page-item" th:classappend="${reviewList.getPrePage()} == 0 ? 'disabled'">
-									<a class="page-link text-black" th:href="@{/admin/review(pageNum=${reviewList.getPrePage()})}">&lt;</a>
-								</li>
-								<li class="page-item" th:each="page : ${#numbers.sequence(reviewList.getNavigateFirstPage(),reviewList.getNavigateLastPage())}" th:classappend="${page == reviewList.getPageNum()} ? 'active'">
-									<a class="page-link text-black" th:text="${page}" th:href="@{/admin/review/(pageNum=${page})}"></a>
-								</li>
-								<li class="page-item" th:classappend="${reviewList.getNextPage()} == 0 ? 'disabled'">
-									<a class="page-link text-black" th:href="@{/admin/review(pageNum=${reviewList.getNextPage()})}">&gt;</a>
-								</li>
-							</ul>
+						</div>	
+						<div th:unless="${reviewList.getList().size()>0}">
+                   			<h1 class="mt-5">검색결과가 없습니다 재검색 해주세요.</h1>
 						</div>
-					</div>	
+						<!-- 페이지네이션 -->
+			 			<ul th:if="${reviewList.getList().size()>0}" class="pagination d-flex justify-content-center mt-5">
+			 				<li class="page-item" th:classappend="${reviewList.getPrePage()} == 0 ? 'disabled'">
+								<a class="page-link text-black" th:href="@{/admin/review(query=${query},pageNum=1)}">&laquo;</a>
+							</li>
+							<li class="page-item" th:classappend="${reviewList.getPrePage()} == 0 ? 'disabled'">
+								<a class="page-link text-black" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getPrePage()})}">&lt;</a>
+							</li>
+							<li class="page-item" th:each="page : ${#numbers.sequence(reviewList.getNavigateFirstPage(),reviewList.getNavigateLastPage())}" th:classappend="${page == reviewList.getPageNum()} ? 'active'">
+								<a class="page-link text-black" th:text="${page}" th:href="@{/admin/review/(query=${query},pageNum=${page})}"></a>
+							</li>
+							<li class="page-item" th:classappend="${reviewList.getNextPage()} == 0 ? 'disabled'">
+								<a class="page-link text-black" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getNextPage()})}">&gt;</a>
+							</li>
+								<li class="page-item" th:classappend="${reviewList.getNextPage()} == 0 ? 'disabled'">
+								<a class="page-link text-black" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getPages()})}">&raquo;</a>
+							</li>
+						</ul>
+						
+						<section class="navbar">
+						  <form action="/admin/review" method="get"class="ms-auto me-5">
+						    <div class="input-group">
+						      <input type="text" name="query"class="form-control" placeholder="검색">
+						      <button class="input-group-text" id="search-bar">
+						      	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+								  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+								</svg>
+						      </button>
+						    </div>
+						  </form>
+						</section>
+					</div>
             </main>
         </div>
-    
+    	
     </div>
 </body>
 </html>
